libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/access-field-literal-type-annotation.jsonc
//@ run: fail
//@ description: Field literal with type annotation should error
[
  "::kernel::special_form::access",
  "tuple",
  { "#literal": 0, "#type": "Integer" }
  //~^ ERROR Remove this type annotation
]
